# opengl_example

./: CMakeLists.txt  Dependency.cmake
shader/: simple.fs  simple.vs
src/: buffer.cpp  common.h  context.cpp  context.h  image.cpp  main.cpp  program.cpp  program.h  shader.cpp  texture.cpp  vertex_layout.cpp
